# armadillo2_bguO

./: README.md
Planning/: CMakeLists.txt  README.md  package.xml
Planning/include/armadillo2_bgu/: master.h
Planning/launch/: test.launch  test_copy.launch
Planning/msg/: ActionDispatch.msg  ActionFeedback.msg
Planning/scripts/: plan_initializer_client.py  plan_initializer_server.py
Planning/src/: README.md  arm.cpp  arm_pick.cpp  arm_trajectory_give.cpp  arm_trajectory_open_gripper.cpp  data_base_node.cpp  detect_elv_door_open.cpp  face_detect_omer.cpp  face_elevator.cpp  give.cpp  master.cpp  move-away-elev.cpp  move-elv-2-floor.cpp  move.cpp  moveNear.cpp  object_detect.cpp  observe.cpp  omer_planner.cpp  pick.cpp  place.cpp  pour.cpp  pour1.cpp  reset-mogo-db.cpp  run_object_rec.py
Planning/src/IDK/: pour11.cpp
Planning/src/New/: enter_elvator.cpp  exit-elevator.cpp  move_to_elevator.cpp
Planning/src/object_recognition/: README.md  bing.py  bing2.py  objects_detection.py  scene_description.py  voice_recognition.py
Planning/src/utils/: JointState_service.cpp  arm_trajectory_close_gripper.cpp  arm_trajectory_take.cpp
Planning/working_server_dan/: nn_server.py
Speech/: README.md
Vision/nn_object_detection/: README.md  detect.py  dlserver.py  nn_server.py  secondery_analysis.py  subject_labels_sorted.pickle  temp.py
Vision/nn_object_detection/coco-master/PythonAPI/: .setup.py.swp  pycocoDemo.py  setup.py
Vision/nn_object_detection/nn_client/: CMakeLists.txt  README.md  package.xml  readme.MD
Vision/nn_object_detection/nn_client/scripts/: detection_marker.py  object_detection.py  points.py  secondery_analysis.py  temp.py  vision_action.py  vision_server.py
Vision/object_recognition/: README.md  object_rec_result.txt  tts.py
